--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.config.import=file:env.properties
 spring.application.name=BuildAChar
-
-spring.datasource.url = jdbc:postgresql://localhost:${DB_PORT}/${DB_DATABASE}
-spring.datasource.username = ${DB_USERNAME}
-spring.datasource.password = ${DB_PASSWORD}
-
-spring.jpa.show-sql = true
+spring.datasource.url=jdbc:postgresql://localhost:${DB_PORT}/${DB_DATABASE}
+spirng.jpa.properties.hibernate.dialict=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
