--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create-drop
+app.authentication.jwt-expiration-ms=3600000
 app-cors:http://localhost:5173
