--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-#### exclude image files ###
-/characterImages/*
+# exclude everything
+somefolder/*
+
+# exception to the rule
+!somefolder/.gitkeep 
